# image-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
image_converter/: cache.py  cli.py  converters.py  encoders.py  globals.py  parser.py  utils.py  validators.py
image_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/image_converter/: cli.py
src/image_converter/core/: cache.py  converters.py  encoders.py  globals.py  parser.py  status.py  task.py  utils.py  validators.py
src/image_converter/execution/: runner.py  worker.py
